[fix] add visibility to gannt

--- a/app/stylesheets/print.sass
+++ b/app/stylesheets/print.sass
@@ -114,6 +114,8 @@ body
       list-style-type: none
     &.sublist
       margin-left: 30px
+  .gannt-task-group
+    visibility: hidden
 
 //@media print
   .controls
